[package]
name = "staking_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
thiserror = "1.0"
solana-program = "=2.2.1"
solana-sdk = "=2.2.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=2.2.1"
